welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:1: error: type mismatch;
 found   : Unit
 required: Int
def dateFashion(you:Int, date:Int):Int = {
                                         ^